...
        <Input
          autoComplete={autoComplete}
          className="pr-14"
          onBlur={onBlur}
          onChangeText={onChangeText}
          onSubmitEditing={onSubmitEditing}
          placeholder="Enter your password…"
          ref={inputRef}
          returnKeyType={returnKeyType}
          secureTextEntry={!isVisible}
          submitBehavior={returnKeyType === "next" ? "submit" : "blurAndSubmit"}
          value={value}
        />
...
